Refactor code for maintainability and readability